@@ -481,6 +481,11 @@
 > - this is a user context command: you can run this command by right-clicking/long-pressing a member ➡️ Apps ➡️ <:area_communities_bot:1135719948224843856> View Join Dates
 > - this is basically just <:area_communities_bot:1135719948224843856> </view-join-dates for-member:1162852142550352037>
 
+### <a:slash_command:1148866611227414568> </cmd:1160259589435048046> `pancake leaderboard`
+> - it shows the people with the highest number of 🥞 pancakes
+>  - add a number at the end of the command to view a specific pages
+> - aliases: \`lb\`/\`leaderboard\`/\`leaderboards\`
+
 ## <:happ:906683365791502366> stuff that changed
 
 ### <a:slash_command:1148866611227414568> </america:1116857516324827146>
@@ -488,6 +493,9 @@
 
 ### <a:slash_command:1148866611227414568> </cmd:1160259589435048046> `america`
 > - it now sends the [/america](https://discord.com/channels/977254354589462618/1160224987853115433/1160239801904152588) chances (instead of the [american national anthem](https://discord.com/channels/977254354589462618/1160224987853115433/1160239815271383141))
+
+### <a:slash_command:1148866611227414568> </cmd:1160259589435048046> `pancake`
+> - added \`p\` as an alias
 
 ### <a:slash_command:1148866611227414568> </view-join-dates at-position:1162852142550352037>, </view-join-dates for-member:1162852142550352037>
 > - renamed from <:area_communities_bot:1135719948224843856> **`/who-joined-at by-position`** and <:area_communities_bot:1135719948224843856> **`/who-joined-at by-position`**
